black screen with play button

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
   padding: 0;
   margin: 0;
+  background: black;
 }
 
 #downloadButton, #recording {
@@ -27,13 +28,7 @@ video {
   color: white;
 }
 .left {
-  display: inline-block;
-  width: 133.33vh;
   background: black;
   text-align: left;
   position: relative;
-}
-.right {
-  display: inline-block;
-  width: 20%;
 }
