--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,21 +7,11 @@ let logElement = document.getElementById("log");
 
 let recordingTimeMS = 5000;
 
-// service firebase.storage {
-//   match /b/{bucket}/o {
-//     match /{allPaths=**} {
-//       allow read, write: if request.auth != null;
-//     }
-//   }
-// }
+var count = 0;
 
-console.log("hello\n\n\n\n\n\n\n\n")
 
 var stopNow = true;
-var storage = firebase.storage();
-var storageRef = storage.ref();
-var videosRef = storageRef.child('videos');
-var recordingRef = videosRef.child('videos/recording.webm');
+
 
 function log(msg) {
   console.log(msg);
@@ -59,8 +49,8 @@ function stop(stream) {
   stream.getTracks().forEach(track => track.stop());
 }
 
-
 startButton.addEventListener("click", function() {
+  console.log("button was pressed");
   stopNow = false;
   beginRecording();
   startButton.style.visibility = "hidden";
@@ -74,7 +64,6 @@ stopButton.addEventListener("click", function() {
   startButton.style.visibility = "visible";
   stopButton.style.visibility = "hidden";
   preview.style.visibility = "hidden";
-
 }, false);
 
 function beginRecording() {
@@ -84,7 +73,6 @@ function beginRecording() {
     setTimeout(beginRecording, recordingTimeMS);
 
     navigator.mediaDevices.getUserMedia({
-      video: true,
       audio: true
     }).then(stream => {
       preview.srcObject = stream;
@@ -93,21 +81,19 @@ function beginRecording() {
       return new Promise(resolve => preview.onplaying = resolve);
     }).then(() => startRecording(preview.captureStream(), recordingTimeMS))
     .then (recordedChunks => {
-      let recordedBlob = new Blob(recordedChunks, { type: "video/webm" });
+      let recordedBlob = new Blob(recordedChunks, { type: "audio/webm" });
 
-      // recordingRef.put(recordedBlob).then(function(snapshot) {
-      //   console.log('Uploaded a blob!');
-      // });
-
-      //download the recording as a webm
       recording.src = URL.createObjectURL(recordedBlob);
       downloadButton.href = recording.src;
-      downloadButton.download = "RecordedVideo.webm";
+      downloadButton.download = "audio_" + count + ".webm";
       downloadButton.click();
+      count += 1;
 
       $.ajax({
-         url: "/run-step",
-      });
+         url: "localhost:5001/run-step",
+         method: "POST",
+         success: "Successfully ajax"
+      }); // jquery ajax
 
       log("Successfully recorded " + recordedBlob.size + " bytes of " + recordedBlob.type + " media.");
     }).catch(log);
