--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html, body {
   padding: 0;
   margin: 0;
   background: black;
+  text-align: center;
 }
 
 #recording {
@@ -52,37 +53,30 @@ h1, h2 {
 }
 
 h1 {
-  font-size: 5em;
+  font-size: 6vw;
   margin: 0;
 }
 h2 {
   letter-spacing: 3px;
-  font-size: 2em;
+  font-size: 2.5vw;
   margin-top: 0;
 }
 
-#buttons {
-  margin: 0 auto;
-  text-align: center;
+#recordButton {
   width: 50vw;
   height: 30vh;
-  transition: all .2s ease-in-out;
+  font-size: 10vw;
+  color: white;
+  margin: 0 auto;
+  display: block;
 }
-#buttons:hover {
+
+#recordButton:hover {
+  transition: all .2s ease-in-out;
   transform: scale(1.2);
   cursor: pointer;
 }
 
-#recordButton {
-  color: white;
-  font-size: 10em;
-}
-
-#downloadbox {
-  margin: 0;
-  margin-top: 15px;
-  text-align: center;
-}
 
 #downloadButton {
   display: none;
@@ -92,8 +86,8 @@ h2 {
 }
 
 #graphs {
-  background-color: black;
-  width: 80vw;
   margin: 0 auto;
-  margin-bottom: 2em;
+  position: fixed;
+  top: calc(100% - 250px);
+  left: 0;
 }
